# LibHttpGen

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  config.patch  include.h  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vcpkg.json
cmake/: clangc.cmake
projects/clang-cpp/: CMakeLists.txt
projects/clang-cpp/include/: clang-cpp.h
projects/clang-cpp/include/clang-cpp/: Cursor.hpp  CursorKind.hpp  Diagnostic.hpp  File.hpp  Forward.hpp  Global.hpp  Index.hpp  PrintingPolicy.hpp  ResourceUsage.hpp  Selector.hpp  SourceLocation.hpp  SourceRange.hpp  TranslationUnit.hpp  Type.hpp  TypeKind.hpp  implement.hpp  private.hpp
projects/clang-cpp/include/clang-cpp/implement/: Cursor.ipp  CursorKind.ipp  Diagnostic.ipp  File.ipp  Index.ipp  PrintingPolicy.ipp  ResourceUsage.ipp  SourceLocation.ipp  SourceRange.ipp  TranslationUnit.ipp  Type.ipp  TypeKind.ipp
projects/clang-cpp/include/clang-cpp/private/: EnumHolder.hpp  UniqueHolder.hpp  Utils.hpp
projects/generator/: CMakeLists.txt  package.json
projects/generator/scripts/: build.mjs  watch.mjs
projects/generator/src/: config.ts  main.ts  new.ts  regenerator.ts  types.ts  utils.ts
projects/interface-builder/: CMakeLists.txt
projects/interface-builder/sources/: main.cpp
projects/interface-extractor/: CMakeLists.txt
projects/interface-extractor/sources/: main.cpp  main.cpp.bak
projects/regenerator/: CMakeLists.txt
projects/regenerator/include/: LHGRegenerator.h
projects/regenerator/sources/: LHGRegenerator.cpp
projects/support/: CMakeLists.txt
projects/support/callback/: callback.hpp  cast.hpp  interface.hpp
projects/support/function/: call.hpp  cast.hpp  interface.hpp
projects/support/general/: call.hpp  callback.hpp  cast.hpp  lifecycle.hpp  traits.hpp
projects/support/manager/: callback_manager.hpp  data_manager.hpp  handle_manager.hpp  manager.hpp
projects/support/server/: apply.hpp  context.hpp  dispatcher.hpp  fail.hpp  listener.hpp  server.hpp  session.hpp  url.hpp
projects/support/utils/: base64.hpp  boost.hpp  forward.hpp  general.hpp  macro.hpp  phony.cpp  phony.hpp  schema.hpp  type.hpp  uuid.cpp  uuid.hpp
projects/wrapper/: gen.interface.ts  package.json  tsconfig.json
projects/wrapper/src/: interface.ts
